# pixie

./: changes.tar
bazel/: repositories.bzl  repository_locations.bzl
src/experimental/standalone_pem/: vizier_server.h
src/pixie_cli/pkg/update/: cli.go
src/pixie_cli/pkg/utils/: cloud.go
src/pixie_cli/pkg/vizier/: connector.go
src/stirling/: BUILD.bazel  stirling.cc  stirling.h
src/stirling/binaries/: stirling_wrapper.cc
src/stirling/bpf_tools/: core_wrapper.h
src/stirling/core/: BUILD.bazel  output.cc  output.h  source_connector.cc  source_connector.h
src/stirling/source_connectors/core_tcp_stats/: BUILD.bazel  tcp_stats.cc  tcp_stats_connector.cc  tcp_stats_connector.h
src/stirling/source_connectors/core_tcp_stats/bcc_bpf/: BUILD.bazel  BUILD.bazel_working  core_tcp_stats.c
src/stirling/source_connectors/core_tcp_stats/bcc_bpf_intf/: BUILD.bazel  tcp_stats.h
src/stirling/source_connectors/net_throughput/: BUILD.bazel  canonical_types.h  net_throughput_connector.cc  net_throughput_connector.h  net_throughput_table.h
src/stirling/source_connectors/net_throughput/bcc_bpf/: BUILD.bazel  BUILD.bazel_raga  net_throughput.c  tmp-net_throughput
src/stirling/source_connectors/net_throughput/bcc_bpf_intf/: BUILD.bazel  net_th-header  net_throughput.h
src/stirling/source_connectors/net_throughput/testing/: BUILD.bazel
src/stirling/source_connectors/proc_exit/: proc_exit_connector.cc
src/stirling/source_connectors/tcp_stats/: 1  BUILD.bazel  net_throughput_connector_ccworking_101  print_utils.h  tcp_stats_bpf_test.cc  tcp_stats_connector.cc  tcp_stats_connector.cc_working  tcp_stats_connector.h  tcp_stats_table.h
src/stirling/source_connectors/tcp_stats/bcc_bpf/: BUILD.bazel  BUILD.bazel_raga  net_throughput.c_14th  net_throughput_bkp_100th  tcp_stats.c  (+1 more)
src/stirling/vmlinux/x86/: BUILD.bazel
(+2 files in other folders)
