# Copyright 2018- The Pixie Authors.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
# SPDX-License-Identifier: MIT

load("//bazel:cc_resource.bzl", "pl_bpf_cc_resource")

package(default_visibility = [
    "//src/stirling/source_connectors/core_tcp_stats:__subpackages__",
    "//src/stirling/source_connectors/core_tcp_stats/bcc_bpf:__pkg__",
])

pl_bpf_cc_resource(
    name = "coretcpstats",
    src = "core_tcp_stats.c",
    deps = [
        "@com_github_libbpf_libbpf//:libbpf",
        "@com_github_libbpf_bpftool//:bpftool",
        "//src/stirling/vmlinux/x86:vmlinux_lib",
        "//src/stirling/source_connectors/core_tcp_stats/bcc_bpf_intf:headers",
    ],
)
